--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -1,1 +1,6 @@
+# sorted alphabetically
 ADD_SUBDIRECTORY(cpp-httplib)
+ADD_SUBDIRECTORY(rapidjson)
+# why on earth does rapidjson not do this itself?
+ADD_LIBRARY(rapidjson INTERFACE)
+TARGET_INCLUDE_DIRECTORIES(rapidjson INTERFACE ./rapidjson/include)
