--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/cpp-httplib"]
 	path = external/cpp-httplib
 	url = git@github.com:yhirose/cpp-httplib.git
+[submodule "external/rapidjson"]
+	path = external/rapidjson
+	url = git@github.com:Tencent/rapidjson.git
