get a server set up that can handle just the basic request

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,7 @@ PROJECT(BattleSnake)
 ADD_SUBDIRECTORY(external)
 
 # internal libraries
+# this is ordered by dependency
+ADD_SUBDIRECTORY(Core/Core)
+ADD_SUBDIRECTORY(Server/Server)
 ADD_SUBDIRECTORY(Battlesnake/Battlesnake)
