--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -1,5 +1,6 @@
 # sorted alphabetically
 ADD_SUBDIRECTORY(cpp-httplib)
+ADD_SUBDIRECTORY(googletest)
 ADD_SUBDIRECTORY(rapidjson)
 # why on earth does rapidjson not do this itself?
 ADD_LIBRARY(rapidjson INTERFACE)
