--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "external/rapidjson"]
 	path = external/rapidjson
 	url = git@github.com:Tencent/rapidjson.git
+[submodule "external/googletest"]
+	path = external/googletest
+	url = git@github.com:google/googletest.git
