add unit tests for ServerTypes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,4 @@ ADD_SUBDIRECTORY(external)
 ADD_SUBDIRECTORY(Core/Core)
 ADD_SUBDIRECTORY(Server/Server)
 ADD_SUBDIRECTORY(Battlesnake/Battlesnake)
+ADD_SUBDIRECTORY(Test)
